--- a/custom_components/ppa_contatto/manifest.json
+++ b/custom_components/ppa_contatto/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "ppa_contatto",
   "name": "PPA Contatto",
-  "documentation": "https://github.com/tarikbc/ha-ppa-contatto",
-  "issue_tracker": "https://github.com/tarikbc/ha-ppa-contatto/issues",
-  "dependencies": [],
   "codeowners": ["@tarikbc"],
-  "requirements": ["aiohttp>=3.8.0"],
   "config_flow": true,
-  "version": "1.2.0",
-  "iot_class": "cloud_polling"
+  "dependencies": [],
+  "documentation": "https://github.com/tarikbc/ha-ppa-contatto",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/tarikbc/ha-ppa-contatto/issues",
+  "requirements": ["aiohttp>=3.8.0"],
+  "version": "1.2.0"
 }
