--- a/custom_components/ppa_contatto/manifest.json
+++ b/custom_components/ppa_contatto/manifest.json
@@ -1,12 +1,16 @@
 {
   "domain": "ppa_contatto",
   "name": "PPA Contatto",
-  "codeowners": ["@tarikbc"],
+  "codeowners": [
+    "@tarikbc"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/tarikbc/ha-ppa-contatto",
   "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/tarikbc/ha-ppa-contatto/issues",
-  "requirements": ["aiohttp>=3.8.0"],
-  "version": "1.4.5"
+  "requirements": [
+    "aiohttp>=3.8.0"
+  ],
+  "version": "1.5.0"
 }
